<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Telemetry opt-in: controlled by SettingsStore(KEY_TELEMETRY = "telemetry_enabled") -->
    <SwitchPreference
        android:key="telemetry_enabled"
        android:title="Enable Telemetry (opt-in)"
        android:defaultValue="false"
        android:summary="When enabled, the app will locally record anonymized events for debugging and QA" />

    <SwitchPreference
        android:key="personalization_enabled"
        android:title="@string/personalization_title"
        android:defaultValue="true"
        android:summary="@string/personalization_summary" />

    <ListPreference
        android:key="map_style"
        android:title="@string/map_style_title"
        android:summary="@string/map_style_summary"
        android:entries="@array/map_style_options"
        android:entryValues="@array/map_style_options"
        android:defaultValue="Streets" />

    <ListPreference
        android:key="language"
        android:title="@string/language_title"
        android:summary="@string/language_summary"
        android:entries="@array/language_options"
        android:entryValues="@array/language_values"
        android:defaultValue="en" />

    <Preference
        android:key="pref_reset_defaults"
        android:title="@string/reset_defaults_title"
        android:summary="@string/reset_defaults_summary" />

</PreferenceScreen>
